--- a/sass/layout/_media-queries.scss
+++ b/sass/layout/_media-queries.scss
@@ -174,6 +174,10 @@
 }
 
 @media screen and (max-width: 620px) {
+    .about .D-flex .img-col lottie-player {
+        width: 300px !important;
+        height: 300px !important;
+    }
 
     .app {
         .D-flex {
@@ -219,11 +223,6 @@
 }
 
 @media screen and (max-width: 571px) {
-    // .service-box {
-    //     width: 500px;
-    //     margin: 13px;
-    // }
-
     .app .app-2 {
         margin: 60px 0;
     }
@@ -237,4 +236,23 @@
     .banner .container .content .title-box p {
         font-size: 1.3rem;
     }
+}
+
+@media screen and (max-width: 400px) {
+    .about .D-flex .img-col lottie-player {
+        width: 260px !important;
+        height: 260px !important;
+    }
+}
+
+@media screen and (max-width: 300px) {
+    .about .D-flex .img-col lottie-player {
+        width: 220px !important;
+        height: 220px !important;
+    }
+
+    .services .services-container {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
 }
