--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -53,6 +53,8 @@
 .about .D-flex .img-col {
     display: grid;
     justify-content: center;
+
+    overflow: hidden;
 }
 
 /* --------- Services ------- */
